--- a/src/main/res/layout/activity_main.xml
+++ b/src/main/res/layout/activity_main.xml
@@ -25,7 +25,7 @@
             android:layout_height="match_parent">
 
             <TextView
-                android:id="@+id/heightTextView"
+                android:id="@+id/heightText"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentStart="true"
@@ -41,11 +41,11 @@
                 android:layout_marginLeft="16dp" />
 
             <TextView
-                android:id="@+id/textView"
+                android:id="@+id/heightTextView"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentStart="true"
-                android:layout_alignTop="@+id/heightTextView"
+                android:layout_alignTop="@+id/heightText"
                 android:layout_marginStart="118dp"
                 android:text="@string/onePointThreeMeters"
                 android:textColor="@color/colorPrimaryText"
@@ -75,24 +75,92 @@
         app:cardElevation="5dp"
         android:layout_width="match_parent"
         android:layout_height="0dp">
-        <TextView
-            android:text="@string/height"
+        <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent" />
+            android:layout_height="match_parent">
+
+            <TextView
+                android:id="@+id/weightText"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentStart="true"
+                android:layout_alignParentTop="true"
+                android:layout_marginStart="16dp"
+                android:layout_marginTop="16dp"
+                android:text="@string/weight"
+                android:textColor="@color/colorPrimaryText"
+                android:textSize="24sp"
+                android:textStyle="bold"
+                app:fontFamily="@font/roboto"
+                android:layout_alignParentLeft="true"
+                android:layout_marginLeft="16dp" />
+
+            <TextView
+                android:id="@+id/weightTextView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentStart="true"
+                android:layout_alignTop="@+id/weightText"
+                android:layout_marginStart="118dp"
+                android:text="@string/onePointThreeMeters"
+                android:textColor="@color/colorPrimaryText"
+                android:textSize="24sp"
+                android:textStyle="bold"
+                app:fontFamily="@font/roboto"
+                android:layout_alignParentLeft="true"
+                android:layout_marginLeft="118dp" />
+
+            <SeekBar
+                android:id="@+id/weightSeekBar"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_alignParentBottom="true"
+                android:layout_centerHorizontal="true"
+                android:layout_marginBottom="21dp" />
+
+
+        </RelativeLayout>
 
     </android.support.v7.widget.CardView>
 
     <android.support.v7.widget.CardView
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_margin="8dp"
         android:layout_weight="48"
         app:cardCornerRadius="5dp"
-        android:layout_margin="8dp"
-        app:cardElevation="5dp"
-        android:layout_width="match_parent"
-        android:layout_height="0dp">
-        <TextView
-            android:text="@string/height"
+        app:cardElevation="5dp">
+
+        <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent" />
+            android:layout_height="match_parent">
+
+            <TextView
+                android:id="@+id/bmiText"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentStart="true"
+                android:layout_centerVertical="true"
+                android:layout_marginStart="61dp"
+                android:text="@string/bmi"
+                android:textColor="@color/colorPrimaryText"
+                android:textSize="24sp"
+                android:textStyle="bold"
+                app:fontFamily="@font/roboto" />
+
+            <TextView
+                android:id="@+id/bmiTextView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerVertical="true"
+                android:layout_toEndOf="@+id/bmiText"
+                android:text="@string/onePointThreeMeters"
+                android:textColor="@color/colorPrimaryText"
+                android:textSize="24sp"
+                android:textStyle="bold"
+                app:fontFamily="@font/roboto" />
+
+        </RelativeLayout>
 
     </android.support.v7.widget.CardView>
 
