--- a/src/main/res/layout/activity_main.xml
+++ b/src/main/res/layout/activity_main.xml
@@ -47,7 +47,7 @@
                 android:layout_alignParentStart="true"
                 android:layout_alignTop="@+id/heightText"
                 android:layout_marginStart="118dp"
-                android:text="@string/onePointThreeMeters"
+                android:text="@string/zeroMetres"
                 android:textColor="@color/colorPrimaryText"
                 android:textSize="24sp"
                 android:textStyle="bold"
@@ -103,7 +103,7 @@
                 android:layout_alignParentStart="true"
                 android:layout_alignTop="@+id/weightText"
                 android:layout_marginStart="118dp"
-                android:text="@string/onePointThreeMeters"
+                android:text="@string/zeroKilogram"
                 android:textColor="@color/colorPrimaryText"
                 android:textSize="24sp"
                 android:textStyle="bold"
@@ -158,7 +158,7 @@
                 android:layout_height="wrap_content"
                 android:layout_centerVertical="true"
                 android:layout_toEndOf="@+id/bmiText"
-                android:text="@string/onePointThreeMeters"
+                android:text="@string/zero"
                 android:textColor="@color/colorPrimaryText"
                 android:textSize="24sp"
                 android:maxLength="8"
